@@ -33,6 +33,15 @@
         z-index: @zindex-navbar - 1;
     }
 
+    & .navbar-text {
+        & .badge {
+            max-width: 5em;
+            min-width: 5em;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+    }
+
     & .navbar-btn {
         .badge {
             /* remove padding to not increase size of navbar-btn */
@@ -225,6 +234,13 @@ img.icon {
         & .form-one2many-toolbar, .form-many2many-toolbar {
             display: inline-table;
             float: right;
+
+            & .badge {
+                max-width: 5em;
+                min-width: 5em;
+                overflow: hidden;
+                text-overflow: ellipsis;
+            }
         }
     }
     & .form-one2many-content, .form-many2many-content {
